corrected table column spacing + new entry spacing

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,8 @@
 .row-createSong{
 
 }
+
+.header_one{
+  display: flex;
+  margin-inline: 591px;
+}
