--- a/src/Components/AddEntryForm/AddEntryForm.css
+++ b/src/Components/AddEntryForm/AddEntryForm.css
@@ -2,14 +2,26 @@
 
 .add_btn{
     font-size: large;
-    padding: 5px 10px;
+    /* padding: 5px 10px; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     border-radius: 0%;
+    
 }
 
 .form-grid{
     display: flex;
+    width: 100%;
+    margin: 55px
+}
+
+.form-group{
+    margin: 2px;
+   padding-left: 4px;
+}
+
+.label-group{
+    padding: 8px;
 }
